# VisualizadorDeGrafos-GUI-App

./: CMakeLists.txt  README.md  project-info.json
.github/workflows/: ci.yml
docs/: CV_EVIDENCE.md  Enunciado_VisualizadorDeGrafos_PY04.md  IMPROVEMENT_ROADMAP.md  TECHNICAL_REVIEW.md
include/: FileController.h  Graph.h  GraphAlgorithms.h  GraphView.h  LinkedList.h  MainWindow.h  VisualItems.h
src/: FileController.cpp  Graph.cpp  GraphAlgorithms.cpp  GraphView.cpp  MainWindow.cpp
tests/: VerifyLogic.cpp
